<resources>
    <string name="app_name">Eleventhlesson</string>
    <string name="alert_dialog_1">Alert Dialog с одной кнопкой</string>
    <string name="alert_dialog_3">Alert Dialog с тремя кнопками</string>
    <string name="alert_dialog_list">Alert Dialog со списком</string>
    <string name="alert_dialog_list_single">Alert Dialog с выбором одного</string>
    <string name="alert_dialog_list_multi">Alert Dialog с выбором несколькмх</string>
    <string name="alert_dialog_custom_form">Alert Dialog с кастомной формой</string>

    <string name="exclamation">Важное сообщение</string>
    <string name="press_button">Нажмите кнопку!</string>
    <string name="button">Кнопка</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="dunno">Не знаю</string>

    <string name="dialog_builder">Диалог с билдером</string>
    <string name="dialog_custom">Кастомный диалог</string>
    <string name="title_dialog">Введите имя</string>
    <string name="done">Готово</string>

    <string name="dialog_message">Диалог снизу</string>
    <string name="dialog">Диалог</string>
</resources>